test/corpus/edges.txt
==================
Edge declarations
==================

edge ex:Friendship :: ex:Person => ex:Person

edge ex:Friendship :: ex:Person =/ {
  ex:name -> string
} /=> ex:Person

---

(source_file
  (edge_declaration (term) (term) (term))
  (edge_declaration (term) (term) (product (component (term) (identifier))) (term)))
